# LightMonitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.release.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  credential.rs  db.rs  geo.rs  local_monitor.rs  main.rs  models.rs  probe.rs  routes.rs  ssh_keys.rs  state.rs  updater.rs
docs/: DEVELOPER.md
scripts/: install-agent.sh  install-server.sh  launch-server.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  i18n.tsx  index.css  theme.ts  types.ts  utils.ts
web/src/components/: LanguageSwitcher.tsx  MetricBar.tsx  ProjectFooter.tsx  SshKeyPanel.tsx  ThemeToggle.tsx
web/src/pages/: AdminPage.tsx  PublicPage.tsx
