[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
